--- a/project/part5htmlcomplete/index.html
+++ b/project/part5htmlcomplete/index.html
@@ -19,6 +19,7 @@
 
 </head>
 <body>
+<div>
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -215,48 +216,6 @@
 			   </div>
     	</div>
 	<HR>
-</section><BR>
-<div class="bottom-sections">
-	
-<section class="middle-columns" style="background-color: lightgrey;">
-
-    <!-- CENTER COLUMN: MIAMI IMAGES -->
-    <div class="mid-col">
-       <h3>Corporate Pages</h3>
-        <hr>
-        <ul class="quick-links">
-        <li><a href="welcome.html" target="_blank">Welcome Page</a></li>
-        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
-        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
-        </ul>
-    </div>
-    <!-- LEFT COLUMN: QUICK LINKS -->
-    <div class="mid-col">
-        <h3>Quick Links</h3>
-        <hr>
-        <ul class="quick-links">
-            <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
-            <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
-            <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
-            <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
-            <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
-            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
-        </ul>
-    </div>
-    <!-- RIGHT COLUMN: SITEMAP TABLE -->
-    <div class="mid-col">
-        <h3>Site Map</h3>
-        <hr>
-        <table class="sitemap-table">
-            <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
-            <tr><td>Licenses</td><td><a href="mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
-            <tr><td>Usage</td><td><a href="mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
-            <tr><td>Types</td><td><a href="licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
-            <tr><td>Cart</td><td><a href="mycart.html?uid=1">MyCart</a></td><td>01/15/2026</td></tr>
-            <tr><td>TypeReviews</td><td><a href="reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
-        </table>
-    </div>
-
 </section>
 <section class="sales">
 <div class="cta" id="contact">
@@ -268,6 +227,7 @@
 <footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
+</div>
 <script type="module" src="./js/slideshow.js"></script>
 <script>
 </script>
